feat: 使用 Chart.js 重寫價格圖表組件
- 前端：用 vue-chartjs + chart.js 取代手刻 Canvas 圖表
- 前端：修復 API timestamp 格式，提升圖表精確度
- 後端：新增中文註釋說明 SecurityConfig、JwtUtil 等
- 排除 IDE 產生的檔案（.project, .settings, .factorypath）

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>